# bluez_media_native

./: .gitignore  .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: ci.yml  publish.yml
example/: README.md  media_browsing.dart  media_control.dart  media_example_utils.dart  player_control.dart  pubspec.yaml  register_player.dart  transport_control.dart
example/flutter_ble_audio/: README.md  pubspec.yaml
example/flutter_ble_audio/lib/: main.dart
example/flutter_ble_audio/linux/: CMakeLists.txt
example/flutter_ble_audio/linux/runner/: my_application.cc
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
interfaces/: org.bluez.Media1.xml  org.bluez.MediaControl1.xml  org.bluez.MediaEndpoint1.xml  org.bluez.MediaFolder1.xml  org.bluez.MediaItem1.xml  org.bluez.MediaPlayer1.xml  org.bluez.MediaTransport1.xml
lib/: bluez_media_native.dart  bluez_media_native_bindings_generated.dart
lib/src/: bluez_media_client.dart  bluez_media_control.dart  bluez_media_folder.dart  bluez_media_item.dart  bluez_media_player.dart  bluez_media_transport.dart
lib/src/ffi/: codec.dart  types.dart
lib/src/internal/: library_loader.dart
linux/: CMakeLists.txt
native/: CMakeLists.txt
native/include/: bluez_media_native.h  bluez_media_types.h  glaze_meta.h  local_player.h  media_bridge.h  media_browser_proxy.h  media_client.h  media_control_proxy.h  media_object_manager.h  media_player_proxy.h  media_transport_proxy.h  media_utils.h
native/src/: bluez_media_client.cpp  bluez_media_native.c  local_player.cpp  media_bridge.cpp  media_browser_proxy.cpp  media_client.cpp  media_control_proxy.cpp  media_object_manager.cpp  media_player_proxy.cpp  media_transport_proxy.cpp  media_utils.cpp
native/test/: CMakeLists.txt  test_media_types.cpp
scripts/: asan.sh  clang_format.sh  clang_tidy.sh  coverage.sh  generate_proxies.sh
src/: CMakeLists.txt  bluez_media_native.c
test/: codec_test.dart
